--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -18,9 +18,9 @@
 - name: download Mongodb java driver 2.11.4
   get_url: url=http://central.maven.org/maven2/org/mongodb/mongo-java-driver/2.11.4/mongo-java-driver-2.11.4.jar dest=/root/sysbench mode=0440
 
-# copy in a new bash script with variables
-- name: Create the startup file
-  template: src=run.simple.bash.j2 dest=/root/sysbench/run.simple.bash mode=0655
+# copy in a new bash config with variables
+- name: Create the config file
+  template: src=config.bash.j2 dest=/root/sysbench/config.bash mode=0655
 
 # create the initial db user for the test
 - mongodb_user: database={{ sysbench_mongodb_database }} user={{ sysbench_mongodb_username }} password={{ sysbench_mongodb_password }} login_host={{ sysbench_mongodb_host }} login_user={{ mongodb_admin_user }} login_password={{ mongodb_admin_pass }} login_port={{ sysbench_mongodb_port }} state=present
