--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# defaults file for ansible_roles-sysbench-mongodb
+# defaults file for ansible_roles-sysbench_mongodb
 
 # username for test to log in as
 sysbench_mongodb_username: sbtest
@@ -8,20 +8,32 @@ sysbench_mongodb_username: sbtest
 sysbench_mongodb_password: sbtest
 
 # host for test to connec to
-sysbench_mongodb_host: 104.130.20.53
+sysbench_mongodb_host: localhost
 
 # port for test to connect to
-sysbench_mongodb_port: 9005
+sysbench_mongodb_port: 27017
 
 # database name to use
 sysbench_mongodb_database: sbtest
 
 # size of documents per collection
-sysbench-mongodb_number_of_docs_per_collection: 100000000
+sysbench_mongodb_number_of_docs_per_collection: 100000
 
 # number of collections
-sysbench-mongodb_number_of_collections: 16
+sysbench_mongodb_number_of_collections: 16
 
 # DB admin
 mongodb_admin_pass: dba
 mongodb_admin_user: dba
+
+# compression (if applicable)
+sysbench_mongodb_compression: quicklz
+
+# number of documents to insert per transaction
+sysbench_mongodb_number_of_docs_per_insert: 1
+
+# number of threads for loader
+sysbench_num_loader_threads: 8
+
+# number of threads for execute
+sysbench_num_writer_threads: 64
