--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,8 +3,9 @@
 
 # install git
 - yum: name=git state=latest
+- yum: name=epel-release state=latest
 - yum: name=python-pip state=latest
-- pip: name=pymongo
+- pip: name=pymongo state=latest
 
 # install java
 - yum: name=java-1.6.0-openjdk-devel.x86_64 state=latest
@@ -12,15 +13,22 @@
 # start fresh
 - command: rm -rf /root/sysbench/
 # get the source code
-- git: repo=https://github.com/kgorman/sysbench-mongodb.git dest=/root/sysbench
+- git: repo=https://github.com/tmcallaghan/sysbench-mongodb.git dest=/root/sysbench
 
 # get the binaries
-- name: download Mongodb java driver 2.11.4
-  get_url: url=http://central.maven.org/maven2/org/mongodb/mongo-java-driver/2.11.4/mongo-java-driver-2.11.4.jar dest=/root/sysbench mode=0440
+- name: download Mongodb java driver
+  get_url: url=http://central.maven.org/maven2/org/mongodb/mongo-java-driver/2.13.0-rc2/mongo-java-driver-2.13.0-rc2.jar dest=/root/sysbench mode=0440
 
 # copy in a new bash config with variables
 - name: Create the config file
   template: src=config.bash.j2 dest=/root/sysbench/config.bash mode=0655
 
 # create the initial db user for the test
-- mongodb_user: database={{ sysbench_mongodb_database }} user={{ sysbench_mongodb_username }} password={{ sysbench_mongodb_password }} login_host={{ sysbench_mongodb_host }} login_user={{ mongodb_admin_user }} login_password={{ mongodb_admin_pass }} login_port={{ sysbench_mongodb_port }} state=present
+- mongodb_user: database={{ sysbench_mongodb_database }} user={{ sysbench_mongodb_username }} password={{ sysbench_mongodb_password }} login_host={{ sysbench_mongodb_host }} login_user={{ mongodb_admin_user }} login_password={{ mongodb_admin_pass }} login_port={{ sysbench_mongodb_port }} state=present roles='dbOwner'
+
+# run the test
+- command: /root/sysbench/run.simple.bash
+  args:
+    chdir: /root/sysbench/
+  environment:
+    classpath: /root/sysbench; /root/sysbench/mongo-java-driver-2.13.0-rc2.jar
